<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"  
    android:background="@color/default_bg"  
    android:orientation="vertical" >
    
    <TextView
         android:id="@+id/txt_home_page_header_title"
         style="@style/HeaderStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/header_bottom_margin"
         android:layout_centerInParent="true"
         android:layout_marginTop="20dp"
         android:ellipsize="end"
         android:gravity="center"
         android:maxLines="1"
         android:singleLine="true"
         android:text="@string/text_homepg_header_title" 
         />
    
    
     <TextView
         android:id="@+id/loginText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"         
         android:ellipsize="end"
         android:gravity="center"
         android:maxLines="1"
         android:singleLine="true"
         android:text="@string/text_login_label"
         style="@style/DefaultTextStyle"
         android:layout_marginBottom="10dp"
         />
     
     <Button 
         android:id="@+id/goToLogin"
         android:layout_width="@dimen/btn_width"
         android:layout_height="@dimen/btn_height"
         style="@style/DefaultButtonStyle"         
         android:text="@string/text_btn_login"/>
     
     <TextView
  		android:id="@+id/registerTxt"
       	android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
       	android:layout_marginTop="20dp"
       	android:layout_marginBottom="10dp"
       	android:ellipsize="end"
       	android:gravity="center"
       	android:maxLines="1"
       	android:singleLine="true"
       	android:text="@string/text_new_accnt_label"
       	style="@style/DefaultTextStyle"       	
        />
     
    <Button 
        android:id="@+id/goToRegister"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
         style="@style/DefaultButtonStyle"        
        android:text="@string/text_btn_new_accnt"/>
    
    <TextView
  		android:id="@+id/demo_label"
       	android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
       	android:layout_marginTop="70dp"
       	android:layout_marginBottom="10dp"
       	android:ellipsize="end"
       	android:gravity="center"
       	android:maxLines="1"
       	android:singleLine="true"
       	android:text="@string/text_demo_label"
       	style="@style/DefaultTextStyle"       	
        />
    
    <Button 
        android:id="@+id/btn_demo_login"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
         style="@style/DefaultButtonStyle"         
        android:text="@string/text_btn_demo"/>
    
    <ProgressBar 
        android:id="@+id/home_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="gone"/>
     
</LinearLayout>