<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:background="@color/default_bg"
    android:orientation="vertical" >
    
    <!-- 
    <include
            android:id="@+id/header"
            layout="@layout/header" />
     -->
     
      <TextView
         android:id="@+id/txt_new_accnt_page_header_title"
         style="@style/HeaderStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/header_bottom_margin"         
         android:layout_centerInParent="true"
         android:layout_marginTop="20dp"
         android:ellipsize="end"
         android:gravity="center"
         android:maxLines="1"
         android:singleLine="true"
         android:text="@string/text_createuser_header_title"/>
      
     <EditText 
         android:id="@+id/editUserName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"         
         android:layout_marginLeft="@dimen/edit_ctrl_left_margin"      
         android:layout_marginRight="@dimen/edit_ctrl_right_margin"
         android:singleLine="true"
         android:hint="@string/text_createuser_name_hint"/>
    
    <EditText 
        android:id="@+id/editUserEmailId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/edit_ctrl_left_margin"      
        android:layout_marginRight="@dimen/edit_ctrl_right_margin"
        android:hint="@string/text_createuser_email_hint"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:layout_marginTop="10dp"
      />
    
     <EditText 
        android:id="@+id/editUserPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/edit_ctrl_left_margin"      
        android:layout_marginRight="@dimen/edit_ctrl_right_margin"
        android:hint="@string/text_createuser_password_hint"
        android:password="true"
        android:singleLine="true"
        android:layout_marginTop="10dp"
      />
     
     <Button 
         android:id="@+id/btnCreateUser"
         android:layout_width="@dimen/btn_width"
         android:layout_height="@dimen/btn_height"
         style="@style/DefaultButtonStyle"          
         android:text="@string/text_createuser_btn_caption"
         android:layout_marginTop="20dp"/>
</LinearLayout>