<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
    
    <!-- 
      <include
            android:id="@+id/header"
            layout="@layout/header" />
             -->
             
   <TextView
         android:id="@+id/txt_assorobot_page_header_title"
         style="@style/HeaderStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/header_bottom_margin"
         android:layout_centerInParent="true"
         android:layout_marginTop="20dp"
         android:ellipsize="end"
         android:gravity="center"
         android:maxLines="1"
         android:singleLine="true"
         android:text="@string/text_assorobot_header_title" 
         />
              
    <EditText 
        android:id="@+id/edit_robot_serial_number"
		android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="@dimen/edit_ctrl_left_margin"
        android:layout_marginRight="@dimen/edit_ctrl_right_margin"
        android:singleLine="true"
        android:hint="@string/hint_robot_serial_number"/>
    
     <Button 
        android:id="@+id/btnAssociateRobot"
        android:layout_width="@dimen/btn_width" 
        android:layout_height="@dimen/btn_height"
        style="@style/DefaultButtonStyle"
        android:text="@string/btn_txt_associate_robot" />    
	        
      <ProgressBar
        android:id="@+id/robot_associate_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible" />
      
</LinearLayout>